@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.292 2006/02/13 11:13:37 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.293 2006/02/13 11:28:56 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -136,6 +136,10 @@ PH/23 When a malformed item such as 1.2.3/24 appears in a host list, it can
 PH/24 An host item such as 1.2.3.4/abc was being treated as the IP address
       1.2.3.4 without a mask. Now it is not recognized as an IP address, and
       PH/23 above applies.
+
+PH/25 Do not write to syslog when running in the test harness. The only
+      occasion when this arises is a failure to open the main or panic logs
+      (for which there is an explicit test).
 
 
 
